--- a/frontend-nextjs/.env
+++ b/frontend-nextjs/.env
@@ -1,1 +1,7 @@
 NEXT_PUBLIC_DEFAULT_ENDPOINT=http://localhost:3333
+
+# SUPER ADMIN DETAILS
+
+NEXT_PUBLIC_SUPER_ADMIN_USERNAME=Super Admin
+NEXT_PUBLIC_SUPER_ADMIN_EMAIL=sa@earn24.com
+NEXT_PUBLIC_SUPER_ADMIN_PASSWORD=Password@1
